--- a/css/screen/cats.css
+++ b/css/screen/cats.css
@@ -43,12 +43,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--yellow);
+  background-color: #ddddfc;
   position: absolute;
-  width: 100vw;
-  height: 100vh;
   top: 0;
   font-size: 132px;
   animation: hideSplashScreen 0.3s ease-in-out forwards;
   animation-delay: 1s;
+}
+
+@keyframes boomandhide {
+  0% {
+    transform: none;
+  }
+  40% {
+    transform: scale(1.5);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+}
+
+#splash-screen i {
+  animation: boomandhide 1.3s ease-in-out forwards;
 }
